--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -174,8 +174,9 @@ textarea {
  */
 
 button,
-input { /* 1 */
-  overflow: visible;
+input {
+  /* 1 */
+  overflow: hidden;
 }
 
 /**
@@ -184,7 +185,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
